--- a/trolley/templates/trolleytracker/index.html
+++ b/trolley/templates/trolleytracker/index.html
@@ -135,7 +135,9 @@
 		
       function initMap(data){
         //console.log("lat: " + data.lat, "lng: " + data.lng);
-        window.oMap = L.map('map').setView([data.lat, data.lng], 15);
+        window.oMap = L.map('map', {
+          scrollWheelZoom: false
+        }).setView([data.lat, data.lng], 15);
         L.AwesomeMarkers.Icon.prototype.options.prefix = 'fa';
         L.tileLayer('http://api.tiles.mapbox.com/v4/linktheoriginal.44f8689d/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibGlua3RoZW9yaWdpbmFsIiwiYSI6IjFjODFkODU1NGVkNWJhODQ2MTk5ZTk0OTVjNWYyZDE0In0.ptQUIfB07dQrUwDM2uMgUw', {
           maxZoom: 18,
