--- a/trolley/templates/trolleytracker/index.html
+++ b/trolley/templates/trolleytracker/index.html
@@ -72,6 +72,10 @@
         padding-left: 5px;
       }
 
+      .info-popup-lower {
+        top:40%;
+      }
+
       .button-close {
         padding: 10px;
       }
@@ -91,7 +95,11 @@
       <p>API Powered by <a href="http://wallingis.com/">Walling Info Systems</a>
       <p>Built by the Code For Greenville Brigade: <a href="https://github.com/codeforgreenville">Github</a></p>
       <p><a href='mailto:yeahthattrolley@gmail.com'>Contact Us!</a></p>
-      <p><button name="modal-close" class="button-close" onclick="javascript:jQuery('#info').hide(); jQuery('#info-question').show();"><i class='fa fa-close'></i>Close</button></p>
+      <p><button name="modal-close" class="button-close" onclick="javascript:closeInfo();"><i class='fa fa-close'></i>Close</button></p>
+    </div>
+    <div id="notrolley" class="info-popup info-popup-lower" style="display:none">
+      <p>There are no trolleys running currently!</p>
+      <p>Check the trolley schedule here: <a href="http://www.greenvillesc.gov/DocumentCenter/Home/View/4690">Greenlink</a></p>
     </div>
 
     <!-- main map div -->
@@ -100,7 +108,7 @@
     <!-- hidden div for the control html - this is copied into the mapbox control with .clone().append() -->
     <div id="controls_container" style="display: none;">
       <div id="controls">
-        <div id='info-question' class='question-background' onclick="javascript:jQuery('#info').show(); jQuery('#info-question').hide();"><i class='fa fa-question'></i></div>
+        <div id='info-question' class='question-background' onclick="javascript:showInfo();"><i class='fa fa-question'></i></div>
       </div>
     </div>
     
@@ -111,6 +119,7 @@
     <script type="text/javascript" src="/static/trolleytracker/textpath/leaflet.textpath.js"></script>
     <script type="text/javascript">
 
+      var shownotrolley = false;
       var oMap; // map object
       var currentPosMarker; //user location via browser get location
       var routes = []; //array of all routes
@@ -178,7 +187,7 @@
                 var oMapMarker = L.marker([data.CurrentLat, data.CurrentLon], {
                   icon: trolleyMarker
                 })
-                .addTo(map);
+                .addTo(map).bindPopup("<p>Last Seen: <b>" + data.LastBeaconTime + "</b></p>");;
 
                 //add the data to the trolleys object
                 trolleys[data.ID] = {
@@ -292,12 +301,34 @@
         }
       }
 
+      function closeInfo() {
+        if (shownotrolley) {
+          jQuery('#notrolley').show();
+        }
+        jQuery('#info').hide(); 
+        jQuery('#info-question').show();
+      }
+
+      function showInfo() {
+        if (shownotrolley) {
+          jQuery('#notrolley').hide();
+        }
+        jQuery('#info').show();
+        jQuery('#info-question').hide();
+      }
+
       (function($){
 
         routedata = jQuery.parseJSON('{{routes|safe}}');
-        routedata.forEach(function(route, routeIndex) {
-          buildRoute(route.RouteShape, "route_" + routeIndex, routecolors[routeIndex]);
-        });
+
+        if (routedata.length == 0) {
+          jQuery('#notrolley').show();
+          shownotrolley = true;
+        } else {
+          routedata.forEach(function(route, routeIndex) {
+            buildRoute(route.RouteShape, "route_" + routeIndex, routecolors[routeIndex]);
+          });
+        }
 
         routedata.forEach(function(route, routeIndex) {
           buildStops(route.Stops, routecolors[routeIndex]);
