--- a/trolley/templates/trolleytracker/index.html
+++ b/trolley/templates/trolleytracker/index.html
@@ -58,10 +58,10 @@
       }
 
       .info-popup {
-        width: 60%;
+        width: 80%;
         position: absolute;
-        left: 20%;
-        right: 20%;
+        left: 10%;
+        right: 10%;
         z-index: 9999;
         top: 10%;
         background-color: white;
@@ -101,9 +101,10 @@
       <p><a href='mailto:yeahthattrolley@gmail.com'>Contact Us!</a></p>
       <p><button name="modal-close" class="button-close" onclick="javascript:closeInfo();"><i class='fa fa-close'></i>Close</button></p>
     </div>
-    <div id="notrolley" class="info-popup info-popup-lower" style="display:none">
+    <div id="notrolley" class="info-popup" style="display:none">
       <p>There are no trolleys running currently!</p>
       <p id="scheduletitle"><b>Current Route Schedule:</b></p>
+      <p><button name="modal-close" class="button-close" onclick="javascript:closeNoTrolley();"><i class='fa fa-close'></i>Close</button></p>
     </div>
 
     <!-- main map div -->
@@ -129,7 +130,7 @@
       var routes = []; //array of all routes
 			var stops = []; //array of all stops (for all routes)
       var trolleys = {}; //dictionary of trolleys
-      var routecolors = ["first", "second", "third"]; //used to set route and stop colors
+      var routecolors = [{css:"first", color:"#7659D1"}, {css:"second", color:"#9AB87A"}, {css:"third", color:"#FEDF66"}]; //used to set route and stop colors
 			var routeDisplay = [false, false]; //used for toggling route display - not currently toggleable
       var checkTimer; //Timer object to check for trolley location updates
 
@@ -217,14 +218,14 @@
         });
 
         var routePolyLine = new L.Polyline(pointList, {
-          color: color,
+          color: color.color,
           weight: 3,
           opacity: 0.5,
           smoothFactor: 1
         });
 
         //use the settext plugin to add directional arrows to the route.
-        routePolyLine.setText('  ►  ', {repeat: true, attributes: {fill: color}});
+        routePolyLine.setText('  ►  ', {repeat: true, attributes: {fill: color.color}});
 
         //store the new polyline in the routes object
         routes.push(routePolyLine);
@@ -232,7 +233,7 @@
 
 			function buildStops(stoplocs, color) {
 				stoplocs.forEach(function(loc, index, array) {
-					var stopMarker = L.divIcon({className: "trolley-stop-icon " + color});
+					var stopMarker = L.divIcon({className: "trolley-stop-icon " + color.css});
 					
 					var oMapMarker = L.marker([loc.Lat, loc.Lon], {
 						icon: stopMarker
@@ -246,7 +247,7 @@
             if (existloc._latlng.lat == loc.Lat && existloc._latlng.lng == loc.Lon) {
               //then this stop is on two routes.  relying on setting the color name as the LAST class argument.  (first is trolley-stop-icon)
               //this will build color strings of all colors to show (red-green-blue if it's on three routes initialized in that order)
-              existloc.options.icon.options.className = existloc.options.icon.options.className + "-" + color
+              existloc.options.icon.options.className = existloc.options.icon.options.className + "-" + color.css
             }
           });
 
@@ -319,6 +320,10 @@
         }
         jQuery('#info').show();
         jQuery('#info-question').hide();
+      }
+
+      function closeNoTrolley() {
+        jQuery('#notrolley').hide();
       }
 
       (function($){
