Styling on schedule popup, sorting.

--- a/trolley/templates/trolleytracker/index.html
+++ b/trolley/templates/trolleytracker/index.html
@@ -63,11 +63,16 @@
         left: 10%;
         right: 10%;
         z-index: 9999;
-        top: 10%;
+        top: 5%;
         background-color: white;
         border-style: solid;
         border-color: gray;
         border-radius: 10px;
+      }
+
+      p {
+        font-size: small;
+        margin: 5px;
       }
 
       .info-popup p {
