removed unnecessary JSON string parsing

--- a/trolley/templates/trolleytracker/index.html
+++ b/trolley/templates/trolleytracker/index.html
@@ -123,8 +123,8 @@
     </div>
     
     <script type="text/javascript">
-      var routedata = jQuery.parseJSON('{{routes|safe}}');
-      var scheduledata = jQuery.parseJSON('{{schedule|safe}}');
+      var routedata = {{routes|safe}};
+      var scheduledata = {{schedule|safe}};
     </script>
 
     <!-- script includes -->
