updated to use leaflet-mapbox-gl library for client-rendered vector tiles

--- a/trolley/templates/trolleytracker/index.html
+++ b/trolley/templates/trolleytracker/index.html
@@ -89,11 +89,10 @@
         padding: 10px;
       }
 
-    </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.1/leaflet.css" />
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css">
-    <script src="http://cdn.jsdelivr.net/jquery/2.1.4/jquery.min.js"></script>
+</style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.1/leaflet.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/fontawesome/4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css">
   </head>
   <body>
 
@@ -128,10 +127,15 @@
     </script>
 
     <!-- script includes -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.1/leaflet.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/g/jquery@2.2.4,leaflet@1.0.1,momentjs@2.15.1,leaflet.awesome-markers@2.0.2"></script>    
     <script type="text/javascript" src="/static/trolleytracker/js/leaflet.polylineDecorator.js"></script>
+    <script type="text/javascript" src="/static/trolleytracker/js/leaflet-mapbox-gl.js"></script>
+
+    <!-- Mapbox GL -->
+    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.26.0/mapbox-gl.css" rel='stylesheet' />
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.26.0/mapbox-gl.js"></script>
+
     <script type="text/javascript" src="/static/trolleytracker/js/main.js"></script>
   </body>
 </html>
